Rewrite method resolveToYaml;
Fix bug which not print correct plain list if it's empty;